修正日志输出及线上数据库配置

--- a/gunicorn.conf
+++ b/gunicorn.conf
@@ -6,8 +6,8 @@ backlog = 2048
 worker_class = "gevent"
 
 debug = False
-#loglevel = 'info'
-loglevel = 'debug'
+loglevel = 'info'
+#loglevel = 'debug'
 logfile = 'log'
 accesslog = 'log/h5game_backend_access.log'
 errorlog = 'log/h5game_backend_error.log'
